# IITP2nd

./: README.md
colab/: Image_classification_Infer.ipynb  pytorch_mnist_cnn.ipynb  pytorch_network_model.py  pytorch_ssd_training.ipynb  readme.txt  torch_classification3.ipynb
paper/: resdme.txt
yolo_ros_test/: cv_bridgeConfig.cmake  readme.txt
yolo_ros_test/ros_dnn_test/: CMakeLists.txt  package.xml
yolo_ros_test/ros_dnn_test/launch/: yolo_test.launch
yolo_ros_test/ros_dnn_test/src/: darknet_sub_node.cpp  yolo_node.cpp
